Refactor startup, file utilities, and add logging config
Replaces Startup.java with Railroad.java as the main entry point and updates build scripts accordingly. Refactors file utility methods from FileHandler to FileUtils, removing MathUtils and introducing ImageUtils and UrlUtils. Adds logging.properties for JavaFX logging configuration and integrates it into the build and packaging process. Improves error handling and logging throughout the codebase, updates menu and help URLs, and enhances project icon generation. Also includes various minor bug fixes, code cleanups, and dependency/project structure changes (adds railroad-core as a submodule and project dependency).